css/styles.css
:root {
  --text-grey: #112;
  --light-text-grey: #99a;
  --button-hover: rgba(0,0,0,0.2);
  --button-active: rgba(0,0,0,0.5);
}

html {
  box-sizing: border-box;
  font-family: "Gamja Flower", cursive;
  font-size: 20px;
}

*, *::before, *::after {
  box-sizing: inherit;
  font-size: inherit;
}

*:focus {
  outline: none;
}

body {
  margin: 0;
  min-height: 100vh;
}

button {
  background: transparent;
}

button:hover {
  cursor: pointer;
  background: var(--button-hover);
}

button:active {
  background: var(--button-active);
}

.overlay {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 1;
  background: rgba(0,0,0,0.5);
}

.wrapper {
  display: flex;
  gap: 20px;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  min-height: 100vh;
}

.title {
  text-align: center;
}

.title > h1 {
  padding: 20px 0 0 0;
  font-size: 3.5rem;
  margin: 0;
}

.title > p {
  font-size: 1.1rem;
  text-decoration: underline;
  margin: 0;
}

main {
  width: 100vw;
  max-width: 2000px;
  padding: 0 5vw;
  display: flex;
  gap: 40px;
  flex-direction: column;
  align-items: center;
}

.input {
  width: 70%;
  min-width: 20rem;
  max-width: 30rem;
  display: flex;
  gap: 5px;
  flex-direction: column;
  padding: 10px 10px;
  background: #fff;
  border-radius: 10px;
  box-shadow: 0 0 5px rgba(0,0,0,0.4);
}

.hidden {
  height: 0;
}

.input-title {
  color: var(--text-grey);
  font-family: inherit;
  font-weight: bold;
  font-size: 1.2rem;
  border: none;
  padding: 0 5px;
  background: transparent;
}

.input-text {
  border: none;
  font-family: inherit;
  color: var(--text-grey);
  overflow-wrap: break-word;
  white-space: pre-wrap;
  padding: 0 5px;
  background: transparent;
}

.input-title::placeholder {
  color: var(--light-text-grey);
}

.input-text[contenteditable=true]:empty::before {
  content: attr(placeholder);
  color: var(--light-text-grey);
}

.submit-btn {
  align-self: flex-end;
  border: none;
  border-radius: 5px;
  font-size: 0.9rem;
  padding: 10px 15px;
}

.notes {
  display: grid;
  gap: 10px;
  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
  width: 100%;
} 

.note {
  display: flex;
  flex-direction: column;
  height: 13rem;
  border-radius: 10px;
  box-shadow: 0 0 1px rgba(0,0,0,0.8);
}

.note:hover {
  box-shadow: 0 0 5px rgba(0,0,0,0.4);
}

.note-overlay {
  width: 60vw;
  height: 80vh;
  position: fixed;
  margin-top: -40vh;
  margin-left: -30vw;
  top: 50%;
  left: 50%;
  z-index: 10;
}

.note-btns {
  display: flex;
}

.note-btns > button {
  flex: 1;
  border: none;
  font-size: 0.9rem;
  padding: 10px;
}

.note-btns > button:first-child {
  border-radius: 0 0 0 10px;
}

.note-btns > button:last-child {
  border-radius: 0 0 10px 0;
}

.note-title {
  padding: 0 1.15rem;
  font-family: inherit;
  font-weight: bold;
  font-size: 1.2rem;
  background: transparent;
  border: none;
  color: var(--text-grey);
}

.note-text {
  flex: 1;
  padding: 0 1.15rem;
  font-family: inherit;
  font-size: 1rem;
  background: transparent;
  color: var(--text-grey);
  border: none;
  resize: none;
}

.note > time {
  align-self: flex-end;
  font-size: 0.75rem;
  color: var(--light-text-grey);
  font-family: sans-serif;
  padding: 5px 10px;
}

footer {
  align-self: stretch;
  text-align: center;
  font-size: 0.9rem;
  font-family: sans-serif;
  padding: 10px 0;
}

@media (max-width: 800px) {
  .note-overlay {
    width: 100vw;
    height: 100vh;
    margin: 0;
    top: 0;
    left: 0;
    border-radius: 0;
  }
}

@media (max-width: 450px) {
  .input {
    min-width: 90vw;
  }

  .notes {
    grid-template-columns: 90vw;
  }
}

